Kubernetes/samples/misc/sample_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: dani-demo
spec:
  containers:
  - name: nginx
    image: nginx
