Kubernetes/samples/misc/minimal_ingress.yaml
#error while evaluating the ingress spec: service "default/nginx-service" is type "ClusterIP", expected "NodePort" or "LoadBalancer"

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
